--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,6 +37,12 @@ services:
       }'
     stdin_open: true
     tty: true
-
+ tp-frontend:
+    image: firas16/tp-frontend:1.0.0
+    ports:
+      - "4200:80"
+    restart: unless-stopped
+    depends_on:
+      - tp-foyer
 volumes:
   mysql_data:
