--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,5 +38,25 @@ services:
     stdin_open: true
     tty: true
 
+  prometheus:
+    image: prom/prometheus:latest
+    ports:
+      - "9090:9090"
+    volumes:
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml
+    command:
+      - '--config.file=/etc/prometheus/prometheus.yml'
+
+  grafana:
+      image: grafana/grafana:latest
+      ports:
+        - "3000:3000"
+      environment:
+        - GF_SECURITY_ADMIN_USER=admin
+        - GF_SECURITY_ADMIN_PASSWORD=grafana
+      volumes:
+        - grafana_data:/var/lib/grafana
+
 volumes:
   mysql_data:
+  grafana_data:
