--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,7 +22,7 @@ services:
   tp-foyer:
     depends_on:
       - mysql-db
-    image: ahmed049/tp-foyer:1.0.0
+    image: firas16/tp-foyer:1.0.0
     restart: on-failure
     ports:
       - "8089:8089"
