--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -55,7 +55,13 @@ services:
         - GF_SECURITY_ADMIN_PASSWORD=grafana
       volumes:
         - grafana_data:/var/lib/grafana
-
+ tp-frontend:  
+    image: firas16/tp-frontend:1.0.0
+    ports:
+      - "4200:80"
+    restart: unless-stopped
+    depends_on:
+      - tp-foyer
 volumes:
   mysql_data:
   grafana_data:
