--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,4 @@
+version: '3.8'
 
 services:
   mysql-db:
@@ -47,21 +48,23 @@ services:
       - '--config.file=/etc/prometheus/prometheus.yml'
 
   grafana:
-      image: grafana/grafana:latest
-      ports:
-        - "3001:3000"
-      environment:
-        - GF_SECURITY_ADMIN_USER=admin
-        - GF_SECURITY_ADMIN_PASSWORD=grafana
-      volumes:
-        - grafana_data:/var/lib/grafana
- tp-frontend:  
+    image: grafana/grafana:latest
+    ports:
+      - "3001:3000"
+    environment:
+      - GF_SECURITY_ADMIN_USER=admin
+      - GF_SECURITY_ADMIN_PASSWORD=grafana
+    volumes:
+      - grafana_data:/var/lib/grafana
+
+  tp-frontend:  
     image: firas16/tp-frontend:1.0.0
     ports:
       - "4200:80"
     restart: unless-stopped
     depends_on:
       - tp-foyer
+
 volumes:
   mysql_data:
   grafana_data:
